# ccvi-data

./: .env.template  .gitignore  README.md  ccvi.py  ccvi_dashboard_output.py  config.yaml  pyproject.toml  setup_storage_from_download.py
base/: objects.py  shared.py
base/datasets/: __init__.py  acled.py  aqueduct.py  berkley.py  bii.py  cpi.py  diva_subsidence.py  ecmwf_spei.py  epr.py  esdac.py  ewds_floods.py  forest_change.py  freedomhouse.py  gee_heatwave.py  gee_heavy_precipitation.py  gee_precipitation_anomaly.py  hdi.py  ibtrak_cyclones.py  ilo.py  imf.py  lgrip.py  modis_wildfires.py  ntl.py  sdg.py  shdi.py  soil_erosion.py  spei.py  swiid.py  ucdp.py  unhcr.py  vdem.py  worldbank.py  worldpop.py  wpp.py
bii_ccvi/: README.md  bii_readme.md  cell.bii_0.5.nc
climate/: shared.py
climate/accumulated/: __init__.py  cyclones.py  drought.py  floods.py  heatwave.py  heavy_precipitation.py  wildfires.py
climate/current/: __init__.py  cyclones.py  drought.py  floods.py  heatwave.py  heavy_precipitation.py  wildfires.py
climate/longterm/: __init__.py  precipitation_anomaly.py  relative_sea_level.py  temperature_anomaly.py
conflict/: shared.py
conflict/context/: __init__.py  actors.py  country.py
conflict/level/: __init__.py  intensity.py  persistence.py  surrounding.py
conflict/persistence/: __init__.py  intensity.py  surrounding.py
conflict/soctens/: __init__.py  intensity.py  persistence.py  surrounding.py
paper/: ccvi_paper_analysis.ipynb  validation_correlation_sensitivity.ipynb
utils/: conversions.py  data_processing.py  ee.py  gee.py  gee_daily.py  index.py  spatial_operations.py  transformations.py
vulnerability/: shared.py
vulnerability/demographic/: __init__.py  dependent.py  popgrowth.py  uprooted.py
vulnerability/environmental/: __init__.py  biodiversity.py  deforestation.py  irrigation.py  soil.py  water.py
(+13 files in other folders)
