[project]
name = "ccvi-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.3",
    "cartopy>=0.24.1",
    "cdsapi>=0.7.6",
    "clean-text>=0.6.0",
    "concentrationmetrics>=0.6.0",
    "country-converter>=1.3",
    "dask>=2025.5.0",
    "dotenv>=0.9.9",
    "duckdb>=1.2.2",
    "earthengine-api>=1.5.15",
    "geopandas>=1.0.1",
    "h5netcdf>=1.6.1",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "netcdf4>=1.7.2",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "panel-imputer==0.7.1",
    "pendulum>=3.0.0",
    "pyarrow>=19.0.1",
    "pyproj>=3.7.1",
    "pyreadr>=0.5.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "rioxarray>=0.19.0",
    "schedule>=1.2.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "shapely>=2.1.0",
    "sqlalchemy>=2.0.43",
    "swifter>=1.4.0",
    "tqdm>=4.67.1",
    "tropycal>=1.3",
    "typer>=0.15.4",
    "wbgapi>=1.0.12",
    "xarray>=2025.3.1",
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
indent-width = 4

# Assume Python 3.12
target-version = "py312"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = false
